--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     crossorigin="anonymous"></script>
 <script src="/socket.io/socket.io.js"></script>
 
-<div class="container">
+<div class="container-fluid">
     <br>
     <div class="jumbotron">
         <h1 class="display-5">Welcome to my todo list</h1>
