--- a/index.html
+++ b/index.html
@@ -16,18 +16,17 @@
 
 <body>
     <div class="main container-fluid">
-        <br>
         <div class="jumbotron">
             <h1 class="display-5">Welcome to my todo list</h1>
         </div>
         <br>
-        <input id="inputTask" class="form-control" placeholder="Input Task">
-        <br>
-        <div>
-        <button id="insertTask" class="btn btn-success">Insert</button>
-        <button id="clearTask" class="pull-right btn btn-success">Clear</button>
+        <div class="text-right">
+            <input id="inputTask" class="form-control" placeholder="Input Task">
+            <br>
+            <button id="clearTask" class="btn btn-success">Clear</button>
+            <button id="insertTask" class="btn btn-success">Insert</button>
         </div>
-        <br><br><br>
+        <br>
         <div id='tasks' class="showTasks">
 
         </div>
